# MNFST-RAG-Backend

./: .env.example  .gitignore  CONNECTION_POOL_FIXES_SUMMARY.md  CREATE_SUPERADMIN.md  README.md  create_superadmin.py  pyproject.toml  test_connection_pool.py
app/: __init__.py  alembic.ini  config.py  database.py  main.py
app/dependencies/: __init__.py  auth.py
app/exceptions/: __init__.py  auth.py
app/middleware/: __init__.py  auth.py  response_transform.py
app/migrations/: env.py
app/models/: __init__.py  base.py  chat.py  document.py  social.py  tenant.py  user.py
app/schemas/: __init__.py  auth.py  chat.py  document.py  response.py  social.py  tenant.py  user.py
app/services/: __init__.py  auth.py  base.py  chat.py  database.py  jwt.py  password.py  seeding.py  tenant.py  tenant_creation.py  user.py
app/utils/: __init__.py  auth.py  exceptions.py  logger.py  mock_data.py  streaming.py  text.py
docs/: README.md  database-initialization.md
docs/api/: overview.md
docs/appendices/: troubleshooting.md
docs/architecture/: auth-system.md  database-schema.md  dependency-injection.md  multi-tenant-design.md  system-architecture.md  tenant-creation-refactor.md
docs/database/: DATABASE_CONSOLIDATION.md  README.md  configuration.md  connection-pool-explained.md  connection-pool-fixes.md  migrations.md  reset-database-guide.md  schema.md  setup.md  troubleshooting.md
docs/deployment/: production.md
docs/features/: chat-streaming.md  document-processing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
(+11 files in other folders)
